--- a/m33/boards/max32657evkit_max32657.conf
+++ b/m33/boards/max32657evkit_max32657.conf
@@ -15,6 +15,8 @@ CONFIG_SYS_CLOCK_HW_CYCLES_PER_SEC=50000000
 CONFIG_CORTEX_M_SYSTICK=y
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=10000 
 
+# TRNG
+CONFIG_ENTROPY_GENERATOR=y
 # Using GPIO
 CONFIG_GPIO=y
 # Using UART
