--- a/m33/prj.conf
+++ b/m33/prj.conf
@@ -8,3 +8,8 @@ CONFIG_NO_OPTIMIZATIONS=y
 CONFIG_THREAD_NAME=y
 CONFIG_DEBUG_THREAD_INFO=y
 CONFIG_THREAD_ANALYZER=y
+
+CONFIG_BT=y
+CONFIG_BT_SMP=y
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_DEVICE_NAME="Smart L"
