--- a/m33/prj.conf
+++ b/m33/prj.conf
@@ -1,9 +1,5 @@
 CONFIG_GPIO=y
 
-# Build for debug (no optimizations) by default
-CONFIG_DEBUG=y
-CONFIG_NO_OPTIMIZATIONS=y
-
 # Enable thread awareness when debugging
 CONFIG_THREAD_NAME=y
 CONFIG_DEBUG_THREAD_INFO=y
@@ -15,3 +11,4 @@ CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="Smart L"
 
 CONFIG_FPU=y
+CONFIG_LOG=y
